fix: overflow body

--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -970,9 +970,6 @@ a {
   }
 }
 @media screen and (min-width: 640px) and (max-width: 999.9px) {
-  body {
-    overflow-x: hidden;
-  }
   .wrapper {
     width: 600px;
   }
